# ffdrafttool

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  config.json.example  example-prompt.md  pyproject.toml  structured_draft_data.json
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: auction_rounds_strategy.md  web_scraping_approach.md
examples/: roster_rules_demo.py
ff_draft_assistant/: .env.example  .gitignore  README.md  config.json.example  coverage.xml  pyproject.toml  run_server.py  setup_google_sheets.py
ff_draft_assistant/docs/: roster_rules_summary.md
ff_draft_assistant/examples/: roster_rules_demo.py
ff_draft_assistant/src/: config.py  server.py
ff_draft_assistant/tests/: test_analyze_available_players.py  test_drafted_filtering_fix.py  test_drafted_player_composite_keys.py  test_owner_team_lookup.py  test_real_data_integration.py  test_suggest_draft_pick.py  test_team_abbreviation_matching.py
src/: config.py  server.py
src/models/: draft_pick.py  draft_rules.py  draft_state.py  draft_state_simple.py  injury_status.py  player.py  player_rankings.py  player_simple.py  team_analysis.py  test_data.py
src/services/: adam_draft_parser.py  dan_draft_parser.py  draft_cache.py  draft_state_cache.py  scraper_adapter.py  sheet_parser.py  (+7 more)
tests/: conftest.py  test_analyze_available_players.py  test_config.py  test_drafted_filtering_fix.py  test_drafted_player_composite_keys.py  test_fixtures.py  test_helpers.py  test_owner_team_lookup.py  test_real_data_integration.py  test_suggest_draft_pick.py  test_team_abbreviation_matching.py
(+72 files in other folders)
